# polyglot

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  Cargo.toml  PR-go-c-port.md  README.md  app.poly  app.virtual.rs  app.wasm  build_check_3.txt  build_check_4.txt  build_check_5.txt  build_errors.txt  check_err.txt  demo.html  demo.poly  demo.virtual.py  demo.virtual.rs  demo.virtual.txt  demo.wasm  demo_python_main.poly  demo_python_main.virtual.py  demo_python_main.virtual.rs  demo_python_main.wasm  geometry.poly  geometry.virtual.rs  lib.rs  lora_chat_v2.html  lsp_diag_errors.txt  lsp_errors.txt  lsp_req_errors.txt  lsp_test_err.txt  lsp_test_err_2.txt  lsp_tg_errors.txt  math.poly  math.virtual.py  math.virtual.rs  module.rs  polyglot-host-worker.mjs  polyglot-host.mjs  (+6 more)
poly-chain/: CODE_REVIEW.md  Cargo.toml
poly-chain-e2e/: Cargo.toml
poly-chain-e2e/src/: lib.rs
poly-chain-e2e/tests/: real_crypto.rs
poly-chain/src/: block.rs  builder.rs  compliance.rs  error.rs  fee.rs  fraud.rs  identity.rs  keys.rs  keystore.rs  lib.rs  node.rs  primitives.rs  state.rs  stp.rs  transaction.rs  validation.rs  wallet.rs
poly-chain/tests/: htlc_integration.rs  r10_pentest_attack_tests.rs  r11_pentest_attack_tests.rs  r12_pentest_attack_tests.rs  r13_pentest_attack_tests.rs  r14_pentest_attack_tests.rs  r15_pentest_attack_tests.rs  r16_pentest_attack_tests.rs  r17_pentest_attack_tests.rs  r18_pentest_attack_tests.rs  r21_pentest_attack_tests.rs  r22_pentest_attack_tests.rs  r24_pentest_attack_tests.rs  r30_stp_enforcement_tests.rs  r35_pentest_attack_tests.rs  r37_pentest_attack_tests.rs  r6_pentest_attack_tests.rs  r7_pentest_attack_tests.rs  r8_pentest_attack_tests.rs  r9_pentest_attack_tests.rs  testnet_pentest.rs
poly-client/: CODE_REVIEW.md  Cargo.toml  build.rs
poly-client/kernels/: modular_ops.cu  ntt.cu
poly-client/src/: encryption.rs  lib.rs  protocol.rs
poly-client/src/ckks/: ciphertext.rs  compress.rs  encoding.rs  encoding_f64.rs  eval_key.rs  fhe_layer.rs  homomorphic.rs  keys.rs  mod.rs  ntt.rs  params.rs  poly.rs  poly_eval.rs  rns.rs  rns_ckks.rs  rns_fhe_layer.rs  sampling.rs  simd.rs
poly-client/tests/: ckks_breaker_tests.rs  ckks_homomorphic_tests.rs  ckks_integration.rs  ckks_metadata_exploit_tests.rs  crypto_attack_tests.rs  protocol_integration.rs  r10_pentest_attack_tests.rs  r11_pentest_attack_tests.rs  r12_pentest_attack_tests.rs  r13_pentest_attack_tests.rs  r14_pentest_attack_tests.rs  r15_pentest_attack_tests.rs  r16_pentest_attack_tests.rs  r25_pentest_attack_tests.rs  r31_ckks_authtag_tests.rs  r40_pentest_attack_tests.rs  r6_pentest_attack_tests.rs  r7_pentest_attack_tests.rs  r8_pentest_attack_tests.rs  r9_pentest_attack_tests.rs  rns_ckks_breaker_tests.rs  rns_ckks_integration.rs  rns_fhe_layer_integration.rs
poly-inference/: CODE_REVIEW.md  Cargo.toml  benchmark.md
poly-inference/src/: client_cli.rs  compliance.rs  compliance_proof.rs  demo_e2e.rs  demo_fhe.rs  demo_fhe_e2e.rs  demo_rns_fhe.rs  demo_rns_fhe_e2e.rs  http.rs  inference.rs  lib.rs  main.rs  model.rs  server.rs
poly-inference/tests/: compliance_breaker_tests.rs  compliance_exploit_tests.rs  compliance_tests.rs  e2e_integration.rs  r10_pentest_attack_tests.rs  r11_pentest_attack_tests.rs  r12_pentest_attack_tests.rs  r13_pentest_attack_tests.rs  r14_pentest_attack_tests.rs  r15_pentest_attack_tests.rs  r16_pentest_attack_tests.rs  r20_pentest_attack_tests.rs  r36_pentest_attack_tests.rs  r43_pentest_attack_tests.rs  r44_pentest_attack_tests.rs  r45_pentest_attack_tests.rs  r46_pentest_attack_tests.rs  r47_pentest_attack_tests.rs  r48_pentest_attack_tests.rs  r6_pentest_attack_tests.rs  r7_pentest_attack_tests.rs  r8_pentest_attack_tests.rs  r9_pentest_attack_tests.rs
poly-lsp/: CODE_REVIEW.md  Cargo.toml
poly-lsp/src/: delegator.rs  json_rpc.rs  main.rs  semantic_tokens.rs  shadow_indexer.rs  sidecar_generator.rs  symbol_table.rs  type_graph.rs  virtual_fs.rs
poly-node/: CODE_REVIEW.md  Cargo.toml
poly-node/src/: config.rs  identity.rs  lib.rs  main.rs  node.rs
poly-node/src/net/: transport.rs
poly-node/src/protocol/: handshake.rs  inference.rs  mod.rs  wire.rs
poly-node/tests/: quic_integration.rs  r10_attack_tests.rs  r11_attack_tests.rs  r12_attack_tests.rs  r13_attack_tests.rs  r14_attack_tests.rs  r15_attack_tests.rs  r16_attack_tests.rs  r17_attack_tests.rs  r33_handshake_binding_tests.rs  r35_attack_tests.rs  r5_attack_tests.rs  r6_attack_tests.rs  r7_attack_tests.rs  r8_attack_tests.rs  r9_attack_tests.rs  security_attack_tests.rs
poly-verified/: .gitignore  CODE_REVIEW.md  Cargo.toml
poly-verified/src/: disclosure.rs  error.rs  fixed_point.rs  lib.rs  proof_composition.rs  proof_serialize.rs  step.rs  types.rs  verified_type.rs
poly-verified/src/crypto/: chain.rs  commitment.rs  hash.rs  merkle.rs  mod.rs  signing.rs
poly-verified/src/ivc/: hash_ivc.rs  mock_ivc.rs  mod.rs
poly-verified/tests/: crypto_breaker_tests.rs  crypto_exploit_tests.rs  disclosure_integration.rs  protocol_attack_tests.rs  r10_pentest_attack_tests.rs  r11_pentest_attack_tests.rs  r12_pentest_attack_tests.rs  r13_pentest_attack_tests.rs  r14_pentest_attack_tests.rs  r15_pentest_attack_tests.rs  r16_pentest_attack_tests.rs  r18_pentest_attack_tests.rs  r26_pentest_attack_tests.rs  r32_merkle_strict_tests.rs  r34_pentest_attack_tests.rs  r35_pentest_attack_tests.rs  r41_pentest_attack_tests.rs  r5_pentest_attack_tests.rs  r6_pentest_attack_tests.rs  r7_pentest_attack_tests.rs  r8_pentest_attack_tests.rs  r9_pentest_attack_tests.rs
polyglot-macros/: CODE_REVIEW.md  Cargo.toml
polyglot-macros/src/: bridge_macro.rs  capture.rs  fold_macro.rs  gpu_macro.rs  js_macro.rs  lib.rs  pure_macro.rs  py_macro.rs  sql_macro.rs  ts_macro.rs  verified_macro.rs
polyglot-runtime/: CODE_REVIEW.md  Cargo.toml
polyglot-runtime/src/: bridge.rs  javascript.rs  lib.rs  marshal.rs  python.rs  rustpython.rs  typescript.rs
polyglot-runtime/tests/: r23_pentest_attack_tests.rs  r27_pentest_attack_tests.rs  r28_pentest_attack_tests.rs  r38_pentest_attack_tests.rs  r39_pentest_attack_tests.rs
(+152 files in other folders)
