[workspace]
members = ["gridmesh", "poly-lsp"]

[package]
name = "polyglot"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "polyglot"
path = "src/main.rs"

[dependencies]
gridmesh = { path = "./gridmesh" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
nom = "7.1"
bytes = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
