[workspace]
members = [".", "gridmesh", "poly-lsp", "poly-verified", "poly-chain", "polyglot-macros", "polyglot-runtime", "poly-inference"]

[package]
name = "polyglot"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "polyglot"
path = "src/main.rs"

[dependencies]
gridmesh = { path = "./gridmesh" }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
nom = "7.1"
bytes = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
getrandom = "0.2"
base64 = "0.21"
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
notify = { version = "6.1", features = ["macos_kqueue"] }
tiny_http = "0.12"
miette = { version = "7", features = ["fancy"] }
dirs = "5.0"
whoami = "1.4"
zip = "2.1"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
polyglot-runtime = { path = "./polyglot-runtime", features = ["javascript", "scripting"] }
polyglot-macros = { path = "./polyglot-macros" }
poly-verified = { path = "./poly-verified" }
sha2 = "0.10"
