[package]
name = "poly-client"
version = "0.1.0"
edition = "2021"
description = "Thin client SDK for Poly Network private verified inference"

[dependencies]
poly-verified = { path = "../poly-verified", features = ["mock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rand = { version = "0.8", optional = true }
bincode = { version = "1.3", optional = true }
zstd = { version = "0.13", optional = true }
cudarc = { version = "0.12", optional = true, features = ["cuda-12060"] }

[features]
default = []
ckks = ["rand", "bincode", "zstd"]
cuda = ["ckks", "cudarc"]
