[package]
name = "poly-client"
version = "0.1.0"
edition = "2021"
description = "Thin client SDK for Poly Network private verified inference"

[dependencies]
# NOTE: the `mock` feature is intentionally NOT enabled here. Enabling it on a
# regular dependency would, via Cargo feature unification, turn on Mock-proof
# acceptance (Verified::is_verified, verify_disclosure, verify_composition) in
# every downstream production binary — including the inference server. Mock
# proofs are trivially forgeable, so `mock` belongs in [dev-dependencies] only.
poly-verified = { path = "../poly-verified" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hmac = { version = "0.12", optional = true }
hkdf = { version = "0.12", optional = true }
rand = { version = "0.8", optional = true }
bincode = { version = "1.3", optional = true }
zstd = { version = "0.13", optional = true }
cudarc = { version = "0.12", optional = true, features = ["cuda-12060"] }

[features]
default = []
ckks = ["rand", "bincode", "zstd", "hmac", "hkdf"]
cuda = ["ckks", "cudarc"]

[dev-dependencies]
# Tests may use Mock proofs; the `mock` feature is scoped to test builds only
# so it never leaks into downstream production binaries.
poly-verified = { path = "../poly-verified", features = ["mock"] }
