[package]
name = "poly-inference"
version = "0.1.0"
edition = "2021"
description = "Verified AI inference demo: Qwen3 0.6B with IVC proofs"

[[bin]]
name = "poly-inference"
path = "src/main.rs"

[dependencies]
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
hf-hub = "0.4"
poly-verified = { path = "../poly-verified" }
polyglot-macros = { path = "../polyglot-macros" }
sha2 = "0.10"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
