[package]
name = "poly-inference"
version = "0.1.0"
edition = "2021"
description = "Verified AI inference server and demo for Poly Network"

[lib]
name = "poly_inference"
path = "src/lib.rs"

[[bin]]
name = "poly-inference"
path = "src/main.rs"

[[bin]]
name = "poly-demo-e2e"
path = "src/demo_e2e.rs"

[[bin]]
name = "poly-demo-fhe"
path = "src/demo_fhe.rs"

[[bin]]
name = "poly-demo-fhe-e2e"
path = "src/demo_fhe_e2e.rs"

[[bin]]
name = "poly-demo-rns-fhe"
path = "src/demo_rns_fhe.rs"

[[bin]]
name = "poly-demo-rns-fhe-e2e"
path = "src/demo_rns_fhe_e2e.rs"

[[bin]]
name = "poly-client-cli"
path = "src/client_cli.rs"

[dependencies]
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
hf-hub = "0.4"
poly-verified = { path = "../poly-verified" }
poly-client = { path = "../poly-client", features = ["ckks"] }
polyglot-macros = { path = "../polyglot-macros" }
sha2 = "0.10"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
rand = "0.8"
tiny_http = "0.12"
ureq = "3"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "poly-client/cuda"]
