[package]
name = "poly-node"
version = "0.1.0"
edition = "2021"
description = "Decentralized compute node for Poly Network"

[lib]
name = "poly_node"
path = "src/lib.rs"

[[bin]]
name = "poly-node"
path = "src/main.rs"

[dependencies]
poly-inference = { path = "../poly-inference" }
poly-client = { path = "../poly-client", features = ["ckks"] }
poly-verified = { path = "../poly-verified" }
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["full", "test-util"] }

[features]
default = []
cuda = ["poly-inference/cuda"]
