[package]
name = "poly-verified"
version = "0.1.0"
edition = "2021"
description = "Verified execution runtime for the Poly programming language"

[dependencies]
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
mock = []

[dev-dependencies]
hex = "0.4"
