[package]
name = "polyglot-runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime support for polyglot macros: Python/JS/GPU interpreters and type marshaling"

[features]
default = ["python"]
python = ["pyo3"]
javascript = ["rquickjs"]
gpu = []

[dependencies]
# PyO3 with ABI3 for broad Python version compatibility
pyo3 = { version = "0.20", features = ["auto-initialize", "abi3-py38"], optional = true }
rquickjs = { version = "0.4", optional = true }
thiserror = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
